--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,12 +2,24 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Natalya Krukova & Igor Prokazov" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="author" content="Natalya Krukova & Igor Prokazov"/>
+  <link href="./index.css" rel="stylesheet">
   <title>GifKA</title>
 </head>
-<body>
+<body class="page">
+
+<header class="header">
+  <div class="logo">
+    <div class="logo__img"></div>
+    <div class="logo__text">Поиск гифки</div>
+  </div>
+</header>
+<main class="content">
+
+</main>
 
 </body>
+<script type="module" src="./index.js"></script>
 </html>
