#разметка без стилей

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,6 +18,47 @@
 </header>
 <main class="content">
 
+
+  <section class="menu">
+
+    <div class="tab-control">
+      <div class="ttt">
+        <div class="tab-item">1 tab-item</div>
+        <div class="tab-item">2 tab-item</div>
+        <div class="tab-item">3 tab-item</div>
+        <div class="tab-item">4 tab-item</div>
+      </div>
+    </div>
+  </section>
+
+
+  <!--  поисковая строка -->
+  <section class="search-link">
+    <form class="form" name="form" novalidate>
+      <div class="ttt">
+        <label class="field">
+          <input class="input input-link"
+                 type="url"
+                 name='link'
+                 placeholder="введите  название"
+                 id="link"
+                 required>
+          <span class="error"
+                id="link-error"></span>
+        </label>
+        <button class="btn-reset" type="button">Reset</button>
+        <button class="btn-search" type="submit">Search</button>
+      </div>
+    </form>
+
+  </section>
+
+  <!--контейнер для гифок-->
+  <section class="animation-images">
+    <ul class="animation-images__list">
+    </ul>
+  </section>
+
 </main>
 
 </body>
