--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,11 @@
   <!--  поисковая строка -->
   <section class="search-link">
     <div class="container">
-      <form class="form" name="search" novalidate>
+      <form class="search" name="search" novalidate>
         <div class="field-constant">
-          <button class="btn btn_search" type="submit">SEARCH</button>
+          <button class="btn search__submit" type="submit">SEARCH</button>
           <label class="field">
-            <input class="form__input input-link"
+            <input class="search__input"
                    type="text"
                    name='search-query'
                    placeholder="Поиск по тегу"
@@ -58,7 +58,7 @@
             <span class="error"
                   id="search-query-error"></span>
           </label>
-          <button class="btn btn_reset" type="button">RESET</button>
+          <button class="btn search__reset" type="button">RESET</button>
         </div>
       </form>
     </div>
