feat: Сделать анимацию кнопки сброса

--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,12 @@
                    name='search-query'
                    placeholder="Поиск по тегу"
                    id="link"
+                   minlength="1"
                    required>
             <span class="error"
                   id="search-query-error"></span>
           </label>
-          <button class="btn search__reset" type="button">RESET</button>
+          <button class="btn search__reset" type="button"></button>
         </div>
       </form>
     </div>
