--- a/src/index.html
+++ b/src/index.html
@@ -20,24 +20,24 @@
   <section class="menu">
     <div class="container">
       <div class="tab-control">
-        <div class="tab-item tab-item_selected tab-item_random">
+        <div class="tab-item tab-item_random" id="tab-item_random">
           <div class="tab-item__img">
           </div>
           <div class="tab-item__text">Случайная гифка</div>
         </div>
-        <div class="tab-item tab-item-trend">
-          <div class="tab-item__img"></div>
-          <div class="tab-item__text">Тренды</div>
-        </div>
-        <div class="tab-item tab-item-new">
-          <div class="tab-item__img"></div>
-          <div class="tab-item__text">Добавить новую</div>
-        </div>
-        <div class="tab-item tab-item-search">
-          <div class="tab-item__img"></div>
-          <div class="tab-item__text">Поиск</div>
-        </div>
+        <div class="tab-item tab-item-trend" id="tab-item-trend">
+      <div class="tab-item__img"></div>
+      <div class="tab-item__text">Тренды</div>
+    </div>
+      <div class="tab-item tab-item-new" id="tab-item-new">
+        <div class="tab-item__img"></div>
+        <div class="tab-item__text">Добавить новую</div>
       </div>
+      <div class="tab-item tab-item-search" id="tab-item-search">
+        <div class="tab-item__img"></div>
+        <div class="tab-item__text">Поиск</div>
+      </div>
+    </div>
     </div>
   </section>
 
