--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,9 @@
     <div class="container">
       <form class="search" name="search" novalidate>
         <div class="field-constant">
-          <button class="btn search__submit" type="submit">SEARCH</button>
+          <button class="btn search__submit" type="submit">
+<!--            <img src="./images/14-search3.png" alt="">-->
+          </button>
           <label class="field">
             <input class="search__input"
                    type="text"
