feat: Добавить кнопку тренды

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="author" content="Natalya Krukova & Igor Prokazov"/>
-  <link href="./pages/index.css" rel="stylesheet">
   <title>GifKA</title>
 </head>
 <body class="page">
@@ -43,7 +42,7 @@
 
 
   <!--  поисковая строка -->
-  <section class="search-link">
+  <section class="tab tab_type_search search-link">
     <div class="container">
       <form class="search" name="search" novalidate>
         <div class="field-constant">
@@ -68,12 +67,11 @@
   </section>
 
   <!--контейнер для гифок-->
-  <section class="animation-images">
+  <section class="tab tab_type_gifs animation-images">
     <ul class="animation-images__list">
     </ul>
   </section>
 </main>
-<script type="module" src="pages/index.js"></script>
 
 
 <template class="template" id="template-item">
